--- a/config.yaml
+++ b/config.yaml
@@ -5,11 +5,15 @@ strava:
   client_id: ""
   client_secret: ""
   refresh_token: ""
+  profile_url: "" # optional dashboard header profile link
+  include_activity_urls: false # when true, tooltip details can show links to individual Strava activities
 
 garmin:
   token_store_b64: ""
   email: ""
   password: ""
+  profile_url: "" # optional dashboard header profile link
+  include_activity_urls: false # when true, tooltip details can show links to individual Garmin activities
   strict_token_only: false # when true, only token_store_b64 is used (no email/password fallback)
 
 sync:
